# StatisticalAgreement

./: .gitignore  Makefile  README.md  bibliography.bib  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
StatisticalAgreement/: __init__.py
StatisticalAgreement/core/: _categorical_agreement.py  _continuous_agreement.py  _methods.py  agreement.py  categorical_agreement.py  classutils.py  continuous_agreement.py  mathutils.py
StatisticalAgreement/simulation/: mc_simulation.py  monte_carlo.py
StatisticalAgreement/tests/: test_monte_carlo.py
examples/: examples.py
src/StatisticalAgreement/: __init__.py  agreement.py  ccc_simulation.py  classutils.py  mc_simulation.py  monte_carlo.py
statistical_agreement/: __init__.py
statistical_agreement/core/: __init__.py  _categorical_agreement.py  _continuous_agreement.py  _methods.py  agreement.py  classutils.py
statistical_agreement/simulation/: mc_simulation.py  monte_carlo.py
statisticalagreement/: __init__.py  __init__.pyi
statisticalagreement/core/: _categorical_agreement.py  _categorical_agreement.pyi  _continuous_agreement.py  _continuous_agreement.pyi  _methods.py  _types.py  agreement.py  classutils.py  mathutils.py
statisticalagreement/simulation/: mc_simulation.py  monte_carlo.py
tests/: __init__.py  test_accuracy.py  test_ccc_lin.py  test_monte_carlo.py  test_vectorized_cov.py
tests/categorical/: conftest.py  test_abs_kappa.py  test_cohen_kappa.py  test_squared_kappa.py
tests/continuous/: conftest.py  test_accuracy.py  test_ccc_lin.py  test_ccc_ustat.py  test_cp_approx.py  test_cp_exact.py  test_msd.py  test_precision.py  test_rbs.py  test_tdi.py
