[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "StatisticalAgreement"
version = "0.4.0"
authors = [
  { name="Cases Rémy", email="remy.cases@gmail.com" },
]
description = "Implementation of indexes used in statistical agreement"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/remyCases/StatisticalAgreement"
"Bug Tracker" = "https://github.com/remyCases/StatisticalAgreement/issues"