[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statisticalagreement"
version = "0.5.0"
dependencies = [
  "numpy>=1.22.0",
  "scipy>=1.10",
  "attrs>=24.1.0",
]
authors = [
  { name="Cases Rémy", email="remy.cases@gmail.com" },
]
description = "Implementation of indexes used in statistical agreement"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/remyCases/StatisticalAgreement"
"Bug Tracker" = "https://github.com/remyCases/StatisticalAgreement/issues"


[tool.pytest.ini_options]
markers = [
    "stochastic: marks tests as using a Monte Carlo evaluation, which is slow (deselect with '-m \"not stochastic\"')",
]